--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,13 @@ export(PlotTSNE)
 export(scAlign)
 export(scAlignCreateObject)
 export(scAlignOptions)
-exportClasses(scAlignClass)
 import(Rtsne)
 import(Seurat)
+import(SingleCellExperiment)
 import(ggplot2)
 import(irlba)
 import(methods)
 import(purrr)
 import(tensorflow)
 import(tfdatasets)
+import(utils)
