--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,8 +17,8 @@ BugReports: https://github.com/quon-titative-biology/scAlign/issues
 biocViews: SingleCell, Transcriptomics, DimensionReduction, NeuralNetwork
 Depends: R (>= 3.5)
 Imports: SingleCellExperiment (>= 1.4),
-         Seurat (< 3.0),
-	       tensorflow,
+         Seurat (>= 2.3.4),
+	 tensorflow,
 	 purrr,
          irlba,
 	 Rtsne,
