--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(scAlignCreateObject)
 export(scAlignMulti)
 export(scAlignOptions)
 import(FNN)
+import(PMA)
 import(Rtsne)
 import(Seurat)
 import(SingleCellExperiment)
