--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,9 +16,8 @@ URL: https://github.com/quon-titative-biology/scAlign
 BugReports: https://github.com/quon-titative-biology/scAlign/issues
 biocViews: SingleCell, Transcriptomics, DimensionReduction,
         NeuralNetwork
-Depends: R (>= 3.5)
-Imports: SingleCellExperiment (>= 1.4), Seurat (>= 2.3.4), tensorflow,
-        purrr, irlba, Rtsne, ggplot2, methods, utils, FNN, PMA
+Depends: R (>= 3.5) SingleCellExperiment (>= 1.4), Seurat (>= 2.3.4), tensorflow,
+         purrr, irlba, Rtsne, ggplot2, methods, utils, FNN, PMA
 Suggests: knitr, rmarkdown, testthat
 VignetteBuilder: knitr
 SystemRequirements: python (< 3.7), tensorflow
