--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,7 @@ URL: https://github.com/quon-titative-biology/scAlign
 BugReports: https://github.com/quon-titative-biology/scAlign/issues
 biocViews: SingleCell, Transcriptomics, DimensionReduction,
         NeuralNetwork
-Depends: R (>= 3.5) SingleCellExperiment (>= 1.4), Seurat (>= 2.3.4), tensorflow,
+Depends: R (>= 3.5), SingleCellExperiment (>= 1.4), Seurat (>= 2.3.4), tensorflow,
          purrr, irlba, Rtsne, ggplot2, methods, utils, FNN, PMA
 Suggests: knitr, rmarkdown, testthat
 VignetteBuilder: knitr
