--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,7 @@ biocViews: SingleCell, Transcriptomics, DimensionReduction,
 Depends: R (>= 3.5), SingleCellExperiment (>= 1.4), Seurat (>= 2.3.4), tensorflow,
          purrr, irlba, Rtsne, ggplot2, methods, utils, FNN
 Suggests: knitr, rmarkdown, testthat
+Changes: Seurat (MultiCCA.R)
 VignetteBuilder: knitr
 SystemRequirements: python (< 3.7), tensorflow
 RoxygenNote: 6.1.1
